--- a/other/binder-icon.ipynb
+++ b/other/binder-icon.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![test](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/joshua-wx/au-radar-explorer/master)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/joshua-wx/openradar-binder/master)"
    ]
   },
   {
