--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,27 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "## You are using the Python ARM Radar Toolkit (Py-ART), an open source\n",
-      "## library for working with weather radar data. Py-ART is partly\n",
-      "## supported by the U.S. Department of Energy as part of the Atmospheric\n",
-      "## Radiation Measurement (ARM) Climate Research Facility, an Office of\n",
-      "## Science user facility.\n",
-      "##\n",
-      "## If you use this software to prepare a publication, please cite:\n",
-      "##\n",
-      "##     JJ Helmus and SM Collis, JORS 2016, doi: 10.5334/jors.119\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os #used for system commands\n",
     "import tempfile #used to create temporary folders to store data\n",
@@ -37,6 +19,7 @@
     "\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
+    "import pandas\n",
     "import pyart\n",
     "from IPython.display import HTML, Image, clear_output\n",
     "import cartopy.crs as ccrs # A toolkit for map projections\n",
@@ -46,10 +29,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#specific settings  \n",
+    "base_url       = 'http://dapds00.nci.org.au/thredds/fileServer/rq0' #base url for NCI dataset  \n",
+    "radar_list_ffn = 'radar_list.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_csv(csv_ffn, header_line):\n",
+    "    \"\"\"\n",
+    "    CSV reader used for the radar locations file (comma delimited)\n",
+    "    \"\"\"\n",
+    "    df = pandas.read_csv(csv_ffn, header=header_line)\n",
+    "    as_dict = df.to_dict(orient='list')\n",
+    "    return as_dict\n",
+    "\n",
+    "def build_radar_list(radar_list_ffn):\n",
+    "    \"\"\"\n",
+    "    build a tuple list for the radar dropdown box\n",
+    "    \"\"\"\n",
+    "    ui_list   = []\n",
+    "    mydict    = read_csv(radar_list_ffn, 0)\n",
+    "    id_list   = mydict['id']\n",
+    "    name_list = mydict['short_name']\n",
+    "    \n",
+    "    for i, rid in enumerate(id_list):\n",
+    "        entry = (str(rid).zfill(2) + ': ' + name_list[i], i)\n",
+    "        ui_list.append(entry)\n",
+    "    \n",
+    "    return ui_list\n",
+    "\n",
     "# Function which generates a plot for each sweep \n",
     "def fast_plot(odim_ffn, cdict, img_path): \n",
     "\n",
@@ -79,7 +96,9 @@
     "    if cdict['cmap']=='HomeyerRainbow': \n",
     "        cmap = pyart.graph.cm_colorblind.HomeyerRainbow \n",
     "    elif cdict['cmap']=='NWSRef': \n",
-    "       cmap = 'pyart_NWSRef' \n",
+    "        cmap = pyart.graph.cm.NWSRef\n",
+    "    elif cdict['cmap']=='BuDRd18':\n",
+    "        pyart.graph.cm.BuDRd18\n",
     "\n",
     "   #create plot \n",
     "    display.plot_ppi_map(cdict['field'], cdict['tilt'], \n",
@@ -151,12 +170,9 @@
     "        if file_dt >= start_dt and file_dt <= end_dt: \n",
     "            filter_file_list.append(file_list[i]) \n",
     "\n",
-    "    \n",
-    "    img_path = tempfile.mkdtemp() \n",
-    "\n",
-    "    #generate images \n",
-    "    img_path = tempfile.mkdtemp() \n",
-    "    n_img = len(filter_file_list) \n",
+    "    #generate images\n",
+    "    img_path = tempfile.mkdtemp()\n",
+    "    n_img = len(filter_file_list)\n",
     "    process_bar = widgets.IntProgress( \n",
     "                   value=1, \n",
     "                   min=1, \n",
@@ -177,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ef67034915f404daf24aca5df8b9201",
+       "model_id": "3d7d20f0dd63466d9a6957f5ae67566d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2168de10f9b4e01b23f32a9e0f2c576",
+       "model_id": "f395599ed62145d4a771ed7d09479257",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,7 +227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55a524412ed24aff95ea87c64899fd91",
+       "model_id": "2bd27a68150a4cacb5bcfe395563c997",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e0a212e628c402abf31cf8239590d3f",
+       "model_id": "4e1fae7c48b1408cb98c15085b449d60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,17 +255,14 @@
    ],
    "source": [
     "warnings.filterwarnings('ignore')  \n",
-    "warnings.simplefilter('ignore')  \n",
-    "  \n",
-    "#specific settings  \n",
-    "base_url     = 'http://dapds00.nci.org.au/thredds/fileServer/rq0' #base url for NCI dataset  \n",
-    "  \n",
+    "warnings.simplefilter('ignore')\n",
+    "\n",
     "def init_ui():\n",
     "    global wrid, wdate, wtime, wdur, wfld, wtilt, wvmin, wvmax, wprng, wcmap\n",
     "    \n",
     "    wrid = widgets.Dropdown(\n",
-    "        options=[('03: Wollongong',1), ('28: Grafton',2), ('50: Marburg',3)],\n",
-    "        value=3,\n",
+    "        options=build_radar_list(radar_list_ffn),\n",
+    "        value=48,\n",
     "        description='Radar Site:',\n",
     "        disabled=False,\n",
     "    )\n",
@@ -301,7 +314,7 @@
     "        disabled=False\n",
     "    )\n",
     "    wcmap = widgets.Dropdown(\n",
-    "        options=[('HomeyerRainbow',1), ('NWSRef',2)],\n",
+    "        options=[('HomeyerRainbow',1), ('NWSRef',2), ('BuDRd18',3)],\n",
     "        value=1,\n",
     "        description='Colormap:',\n",
     "        disabled=False,\n",
@@ -349,7 +362,7 @@
     "    global wrid, wdate, wtime, wdur, wfld, wtilt, wvmin, wvmax, wprng, wcmap\n",
     "    \n",
     "    #extract vars  \n",
-    "    rid   = int(wrid.options[wrid.value-1][0][0:2])  \n",
+    "    rid   = int(wrid.options[wrid.value][0][0:2])  \n",
     "    rdate = wdate.value  \n",
     "    rtime = wtime.value  \n",
     "    rdur  = int(wdur.options[wdur.value-1][0])  \n",
