updated yml file for pandas

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "## You are using the Python ARM Radar Toolkit (Py-ART), an open source\n",
+      "## library for working with weather radar data. Py-ART is partly\n",
+      "## supported by the U.S. Department of Energy as part of the Atmospheric\n",
+      "## Radiation Measurement (ARM) Climate Research Facility, an Office of\n",
+      "## Science user facility.\n",
+      "##\n",
+      "## If you use this software to prepare a publication, please cite:\n",
+      "##\n",
+      "##     JJ Helmus and SM Collis, JORS 2016, doi: 10.5334/jors.119\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os #used for system commands\n",
     "import tempfile #used to create temporary folders to store data\n",
@@ -29,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,13 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d7d20f0dd63466d9a6957f5ae67566d",
+       "model_id": "73e306e9cc6a4b11a3e95517c959a2f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,9 +229,16 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching: http://dapds00.nci.org.au/thredds/fileServer/rq0/odim_pvol/50/2008/vol/50_20081116.pvol.zip\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f395599ed62145d4a771ed7d09479257",
+       "model_id": "9facf3129fb04cb7a3eb0baf061b39d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bd27a68150a4cacb5bcfe395563c997",
+       "model_id": "4a20595a1bbd463e8a704584dbb5a7fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e1fae7c48b1408cb98c15085b449d60",
+       "model_id": "8dc9a511eb4d4fa89b65d8e0e6ab42f0",
        "version_major": 2,
        "version_minor": 0
       },
