--- a/image_generator.ipynb
+++ b/image_generator.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,9 +74,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      " 33%|███▎      | 1/3 [00:02<00:05,  2.62s/it]"
+      "100%|██████████| 3/3 [00:08<00:00,  2.69s/it]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Click here to download: <a href='./images/50_2014-11-27.image_request.03-04-2020_16:36:29.zip' target='_blank'>./images/50_2014-11-27.image_request.03-04-2020_16:36:29.zip</a><br>"
+      ],
+      "text/plain": [
+       "/home/meso/dev/openradar-binder/images/50_2014-11-27.image_request.03-04-2020_16:36:29.zip"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
