added field name to files and animation output

--- a/image_generator.ipynb
+++ b/image_generator.ipynb
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# BASIC CONFIGURATION\n",
     "rid   = '50'         # radar identification number (leading zero needed for single digits), string\n",
-    "rdate = '2014/11/27' # date to start the image generation (format: YYYY/MM/DD), string\n",
-    "rtime = '15:00'      # time to start the image generation (format: HH:MM), string\n",
-    "rdur  = 0.5            # number of hours from start date/time for image generation (MUST NOT EXTEND TO THE NEXT DAY), integer\n",
+    "rdate = '2014/11/27' # UTC date to start the image generation (format: YYYY/MM/DD), string\n",
+    "rtime = '06:00'      # UTC time to start the image generation (format: HH:MM), string\n",
+    "rdur  = 1            # number of hours from start date/time for image generation (MUST NOT EXTEND TO THE NEXT DAY), integer\n",
     "prng  = 150          # number of kilometers from the radar site to plot, integer\n",
     "field = 'reflectivity'       # product to plot. Reflectivity = 'reflectivity', Doppler Velocity = 'velocity'\n",
     "                             # (Others/Polarimetric:differential_reflectivity, cross_correlation_ratio, specific_differential_phase, differential_phase, spectrum_width), string\n",
@@ -51,61 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "## You are using the Python ARM Radar Toolkit (Py-ART), an open source\n",
-      "## library for working with weather radar data. Py-ART is partly\n",
-      "## supported by the U.S. Department of Energy as part of the Atmospheric\n",
-      "## Radiation Measurement (ARM) Climate Research Facility, an Office of\n",
-      "## Science user facility.\n",
-      "##\n",
-      "## If you use this software to prepare a publication, please cite:\n",
-      "##\n",
-      "##     JJ Helmus and SM Collis, JORS 2016, doi: 10.5334/jors.119\n",
-      "\n",
-      "Fetching: http://dapds00.nci.org.au/thredds/fileServer/rq0/50/2014/vol/50_20141127.pvol.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/3 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating Images\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:08<00:00,  3.00s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Click here to download: <a href='./images/50_2014-11-27.image_request.16-04-2020_12:33:19.zip' target='_blank'>./images/50_2014-11-27.image_request.16-04-2020_12:33:19.zip</a><br>"
-      ],
-      "text/plain": [
-       "/home/meso/dev/openradar-binder/images/50_2014-11-27.image_request.16-04-2020_12:33:19.zip"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import core\n",
     "\n",
@@ -120,13 +68,6 @@
     "\n",
     "core.build_animation(cdict)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
