updated field names

--- a/image_generator.ipynb
+++ b/image_generator.ipynb
@@ -46,6 +46,7 @@
         "from tqdm import tqdm\n",
         "from adjustText import adjust_text\n",
         "from IPython.display import display, FileLink\n",
+        "from PIL import Image\n",
         "\n",
         "import pyart\n",
         "\n",
@@ -54,22 +55,94 @@
         "warnings.simplefilter('ignore')"
       ],
       "metadata": {
-        "id": "OzW4W3eC4fTD"
+        "id": "OzW4W3eC4fTD",
+        "outputId": "5d83e128-c1ed-48cb-a553-efbaa03d5e5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: arm_pyart in /usr/local/lib/python3.10/dist-packages (1.17.0)\n",
+            "Requirement already satisfied: cartopy in /usr/local/lib/python3.10/dist-packages (0.22.0)\n",
+            "Requirement already satisfied: adjustText in /usr/local/lib/python3.10/dist-packages (1.0.4)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (1.25.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (1.11.4)\n",
+            "Requirement already satisfied: netCDF4 in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (1.6.5)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (3.7.1)\n",
+            "Requirement already satisfied: pooch in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (1.8.1)\n",
+            "Requirement already satisfied: cftime in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (1.6.3)\n",
+            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (2024.2.0)\n",
+            "Requirement already satisfied: s3fs in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (2024.2.0)\n",
+            "Requirement already satisfied: open-radar-data in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (0.0.9)\n",
+            "Requirement already satisfied: xradar in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (0.4.3)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (1.5.3)\n",
+            "Requirement already satisfied: xarray!=0.21.0 in /usr/local/lib/python3.10/dist-packages (from arm_pyart) (2024.2.0)\n",
+            "Requirement already satisfied: shapely>=1.7 in /usr/local/lib/python3.10/dist-packages (from cartopy) (2.0.3)\n",
+            "Requirement already satisfied: packaging>=20 in /usr/local/lib/python3.10/dist-packages (from cartopy) (23.2)\n",
+            "Requirement already satisfied: pyshp>=2.1 in /usr/local/lib/python3.10/dist-packages (from cartopy) (2.3.1)\n",
+            "Requirement already satisfied: pyproj>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from cartopy) (3.6.1)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->arm_pyart) (1.2.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib->arm_pyart) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->arm_pyart) (4.49.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->arm_pyart) (1.4.5)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->arm_pyart) (9.4.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->arm_pyart) (3.1.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib->arm_pyart) (2.8.2)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from pyproj>=3.1.0->cartopy) (2024.2.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas->arm_pyart) (2023.4)\n",
+            "Requirement already satisfied: platformdirs>=2.5.0 in /usr/local/lib/python3.10/dist-packages (from pooch->arm_pyart) (4.2.0)\n",
+            "Requirement already satisfied: requests>=2.19.0 in /usr/local/lib/python3.10/dist-packages (from pooch->arm_pyart) (2.31.0)\n",
+            "Requirement already satisfied: aiobotocore<3.0.0,>=2.5.4 in /usr/local/lib/python3.10/dist-packages (from s3fs->arm_pyart) (2.12.1)\n",
+            "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /usr/local/lib/python3.10/dist-packages (from s3fs->arm_pyart) (3.9.3)\n",
+            "Requirement already satisfied: cmweather in /usr/local/lib/python3.10/dist-packages (from xradar->arm_pyart) (0.3.2)\n",
+            "Requirement already satisfied: dask in /usr/local/lib/python3.10/dist-packages (from xradar->arm_pyart) (2023.8.1)\n",
+            "Requirement already satisfied: h5netcdf in /usr/local/lib/python3.10/dist-packages (from xradar->arm_pyart) (1.3.0)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.10/dist-packages (from xradar->arm_pyart) (3.9.0)\n",
+            "Requirement already satisfied: lat-lon-parser in /usr/local/lib/python3.10/dist-packages (from xradar->arm_pyart) (1.3.0)\n",
+            "Requirement already satisfied: xarray-datatree>=0.0.10 in /usr/local/lib/python3.10/dist-packages (from xradar->arm_pyart) (0.0.14)\n",
+            "Requirement already satisfied: xmltodict in /usr/local/lib/python3.10/dist-packages (from xradar->arm_pyart) (0.13.0)\n",
+            "Requirement already satisfied: botocore<1.34.52,>=1.34.41 in /usr/local/lib/python3.10/dist-packages (from aiobotocore<3.0.0,>=2.5.4->s3fs->arm_pyart) (1.34.51)\n",
+            "Requirement already satisfied: wrapt<2.0.0,>=1.10.10 in /usr/local/lib/python3.10/dist-packages (from aiobotocore<3.0.0,>=2.5.4->s3fs->arm_pyart) (1.14.1)\n",
+            "Requirement already satisfied: aioitertools<1.0.0,>=0.5.1 in /usr/local/lib/python3.10/dist-packages (from aiobotocore<3.0.0,>=2.5.4->s3fs->arm_pyart) (0.11.0)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs->arm_pyart) (1.3.1)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs->arm_pyart) (23.2.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs->arm_pyart) (1.4.1)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs->arm_pyart) (6.0.5)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs->arm_pyart) (1.9.4)\n",
+            "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs->arm_pyart) (4.0.3)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->arm_pyart) (1.16.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->pooch->arm_pyart) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->pooch->arm_pyart) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->pooch->arm_pyart) (2.0.7)\n",
+            "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.10/dist-packages (from dask->xradar->arm_pyart) (8.1.7)\n",
+            "Requirement already satisfied: cloudpickle>=1.5.0 in /usr/local/lib/python3.10/dist-packages (from dask->xradar->arm_pyart) (2.2.1)\n",
+            "Requirement already satisfied: partd>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from dask->xradar->arm_pyart) (1.4.1)\n",
+            "Requirement already satisfied: pyyaml>=5.3.1 in /usr/local/lib/python3.10/dist-packages (from dask->xradar->arm_pyart) (6.0.1)\n",
+            "Requirement already satisfied: toolz>=0.10.0 in /usr/local/lib/python3.10/dist-packages (from dask->xradar->arm_pyart) (0.12.1)\n",
+            "Requirement already satisfied: importlib-metadata>=4.13.0 in /usr/local/lib/python3.10/dist-packages (from dask->xradar->arm_pyart) (7.0.1)\n",
+            "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /usr/local/lib/python3.10/dist-packages (from botocore<1.34.52,>=1.34.41->aiobotocore<3.0.0,>=2.5.4->s3fs->arm_pyart) (1.0.1)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.10/dist-packages (from importlib-metadata>=4.13.0->dask->xradar->arm_pyart) (3.17.0)\n",
+            "Requirement already satisfied: locket in /usr/local/lib/python3.10/dist-packages (from partd>=1.2.0->dask->xradar->arm_pyart) (1.0.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# @title\n",
         "# BASIC CONFIGURATION\n",
-        "rid   = 3           # radar identification number, integer\n",
-        "rdate = '2004/10/24' # UTC date to start the image generation (format: YYYY/MM/DD), string\n",
+        "rid   = 50           # radar identification number, integer\n",
+        "rdate = '2014/11/27' # UTC date to start the image generation (format: YYYY/MM/DD), string\n",
         "rtime = '05:00'      # UTC time to start the image generation (format: HH:MM), string\n",
-        "rdur  = 3            # number of hours from start date/time for image generation (MUST NOT EXTEND TO THE NEXT DAY), integer\n",
+        "rdur  = 1            # number of hours from start date/time for image generation (MUST NOT EXTEND TO THE NEXT DAY), integer\n",
         "prng  = 150          # number of kilometers from the radar site to plot, integer\n",
-        "field = 'reflectivity_horizontal'       # product to plot. Reflectivity = 'reflectivity', Doppler Velocity = 'velocity'\n",
+        "field = 'reflectivity_horizontal'       # product to plot. Reflectivity = 'reflectivity_horizontal', Doppler Velocity = 'velocity_horizontal'\n",
         "                             # (Others/Polarimetric:differential_reflectivity, cross_correlation_ratio, specific_differential_phase, differential_phase, spectrum_width), string\n",
         "# MAP CONFIGURATION\n",
         "hide_place_names = [''] #list of placenames you wish to hide from the map (they are auto generated), list of string\n",
@@ -97,7 +170,7 @@
       "metadata": {
         "id": "EstGP-n45X9N"
       },
-      "execution_count": 16,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -155,21 +228,11 @@
         "        raise ValueError(f\"get_id_from_filename: Failed to extract radar if from: {filename}\")\n",
         "        return None\n",
         "\n",
-        "def make_gif(files, output, delay=100, repeat=True,**kwargs):\n",
-        "    \"\"\"\n",
-        "    Uses imageMagick to produce an animated .gif from a list of\n",
-        "    picture files.\n",
-        "    INPUT:\n",
-        "        files: list of full file paths\n",
-        "        output: full filename for output gif\n",
-        "        delay: delay in ms between animation frames\n",
-        "        repeat: Set to infinite loop\n",
-        "    OUTPUT:\n",
-        "        None\n",
-        "    \"\"\"\n",
-        "    loop = -1 if repeat else 0\n",
-        "    os.system('convert -delay %d -loop %d %s %s'\n",
-        "              %(delay,loop,\" \".join(files),output))\n",
+        "def make_gif(files, output, delay=100):\n",
+        "    frames = [Image.open(image) for image in files]\n",
+        "    frame_one = frames[0]\n",
+        "    frame_one.save(output, format=\"GIF\", append_images=frames,\n",
+        "               save_all=True, duration=delay, loop=0)\n",
         "\n",
         "def _read_csv(csv_ffn, header_line):\n",
         "    \"\"\"\n",
@@ -205,11 +268,11 @@
         "    display = pyart.graph.RadarMapDisplay(my_radar)\n",
         "\n",
         "    #set plotting options\n",
-        "    if cdict['field']=='reflectivity':\n",
+        "    if cdict['field']=='reflectivity_horizontal':\n",
         "        vmin = cdict['vmin_ref']\n",
         "        vmax = cdict['vmax_ref']\n",
         "        cmap = cdict['cmap_ref']\n",
-        "    elif cdict['field']=='velocity':\n",
+        "    elif cdict['field']=='velocity_horizontal':\n",
         "        vmin = cdict['vmin_vel']\n",
         "        vmax = cdict['vmax_vel']\n",
         "        cmap = cdict['cmap_vel']\n",
@@ -326,7 +389,7 @@
         "    now = datetime.now()\n",
         "    gif_ffn = './images/' + f'{radar_id}_{start_dt.strftime(\"%Y-%m-%d\")}_{cdict[\"field\"]}.animation.{now.strftime(\"%d-%m-%Y_%H:%M:%S\")}.gif'\n",
         "    files_to_animate = sorted(glob(img_path + '/*'))\n",
-        "    make_gif(files_to_animate, gif_ffn, delay=100, repeat=True)\n",
+        "    make_gif(files_to_animate, gif_ffn, delay=100)\n",
         "\n",
         "    #zip files and move to local directory\n",
         "    now = datetime.now()\n",
@@ -349,20 +412,20 @@
         "    display(local_file)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "-XothS2U5A4A"
       },
-      "execution_count": 19,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "Nwi0GVNAj7Fb",
-        "outputId": "929ed619-8102-4fb0-bb58-35e812a2c847",
+        "outputId": "9882b643-8e50-47b3-c8bb-40f4f2834e40",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 159
         }
       },
       "outputs": [
@@ -370,7 +433,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "File already downloaded: http://dapds00.nci.org.au/thredds/fileServer/rq0/3/2004/vol/3_20041024.pvol.zip\n",
+            "Fetching: http://dapds00.nci.org.au/thredds/fileServer/rq0/50/2014/vol/50_20141127.pvol.zip\n",
             "Generating Images\n"
           ]
         },
@@ -378,8 +441,32 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 17%|█▋        | 3/18 [01:19<06:31, 26.08s/it]"
+            "100%|██████████| 6/6 [02:31<00:00, 25.28s/it]\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "/content/images/50_2014-11-27_reflectivity_horizontal.image_request.07-03-2024_04:02:16.zip"
+            ],
+            "text/html": [
+              "Click here to download zip of images: <a href='./images/50_2014-11-27_reflectivity_horizontal.image_request.07-03-2024_04:02:16.zip' target='_blank'>./images/50_2014-11-27_reflectivity_horizontal.image_request.07-03-2024_04:02:16.zip</a><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "/content/images/50_2014-11-27_reflectivity_horizontal.animation.07-03-2024_04:02:16.gif"
+            ],
+            "text/html": [
+              "Click here to download animation: <a href='./images/50_2014-11-27_reflectivity_horizontal.animation.07-03-2024_04:02:16.gif' target='_blank'>./images/50_2014-11-27_reflectivity_horizontal.animation.07-03-2024_04:02:16.gif</a><br>"
+            ]
+          },
+          "metadata": {}
         }
       ],
       "source": [
